Related-Bug: #1452247 - css changes for fixing prouter alignment

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -3105,3 +3105,7 @@ input.ace-input[type=radio] + .ace-lbl.inactive::before {
     height:200px!important;
     overflow-y:auto;
 }
+.new-column-label{
+    padding-top:5px;
+    text-align:right;
+}
